# openclaw-webhook-bridge

./: .gitignore  AGENTS.md  CLAUDE.md  COMMANDS.md  COMMANDS_USAGE.md  Cargo.toml  GO_VS_RUST.md  IMPLEMENTATION_SUMMARY.md  Makefile  Makefile.rust  README.md  RUST_README.md  SESSION_CONTROL.md  go.mod  go.sum  test-websocket.js
.github/workflows/: release.yml
cloudflare-webhook/: package.json  wrangler.toml
cloudflare-webhook/src/: index.ts  websocket-hub.ts
cmd/bridge/: main.go  main_release.go
internal/bridge/: bridge.go
internal/clawdbot/: client.go
internal/commands/: handler.go
internal/config/: config.go
internal/openclaw/: client.go
internal/sessions/: control.go  session_key.go  store.go  types.go
internal/webhook/: client.go
local-webhook-server/: package-lock.json  package.json
node-webhook/: server.js  test-page.html
openclaw-app/: _worker.js  cloudflare-env.d.ts  next.config.ts  package.json  pnpm-lock.yaml  wrangler.jsonc
openclaw-mapp/: global.d.ts  package.json  pnpm-lock.yaml  project.config.json  tailwind.config.js  tsconfig.json
openclaw-mapp/@types/: index.d.ts
openclaw-mapp/config/: index.ts
openclaw-mapp/src/: app.config.ts  app.scss  app.tsx
scripts/: build-rust.sh  build.sh
src/: main.rs
src/bridge/: mod.rs
src/commands/: mod.rs
src/config/: mod.rs
src/openclaw/: mod.rs
src/sessions/: mod.rs  store.rs  types.rs
src/webhook/: mod.rs
ts-bridge/: README.md  package.json  tsconfig.json
ts-bridge/src/: bridge.ts  cli.ts  config.ts  index.ts  types.ts
workers/clawdbot-webhook/: package.json  (+3 more)
(+71 files in other folders)
